<resources>
    <string name="app_name">CalendarApp</string>
    <string name="login_text">E-Mail</string>
    <string name="login_hint">Enter your e-mail</string>
    <string name="login_button_text">LOGIN</string>
    <string name="password">Password</string>
    <string name="password_hint">Enter password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_up">Don\'t have an account? Sign up</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="reset_password_button_text">Reset</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="dummy_text_10w">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nec.</string>
    <string name="email_from">From:</string>
    <string name="email_to">To:</string>
    <string name="email_to_hint">To</string>
    <string name="email_from_hint">From</string>
    <string name="email_subject">Subject:</string>
    <string name="email_subject_hint">Subject</string>
    <string name="compose_email_hint">Compose email</string>
    <string name="email_send_button">Send</string>
    <string name="email_attachment_desc">E-mail attachment</string>
    <string name="email_send_btn_desc">Email send</string>
    <string name="email_text">E-Mail</string>
    <string name="email_hint">Enter your e-mail</string>
    <string name="username_text">Username</string>
    <string name="username_hint">Enter your username</string>
    <string name="github_username">GitHub Username</string>
    <string name="image_url_hint">Enter your GitHub username</string>
    <string name="list_users">LIST USERS</string>
    <string name="profile_picture_desc">Profile picture</string>
    <string name="update_user">Update User</string>
    <string name="delete">Delete</string>
    <string name="delete_user">Delete user</string>
    <string name="delete_user_message">Are you sure you want to delete user?</string>
    <string name="reset_password">Reset password</string>
    <string name="update">Update</string>
    <string name="send_email">Send Email</string>
    <string name="settings">SETTINGS</string>
    <string name="notes">Notes</string>
    <string name="sensors">Sensors</string>
    <string name="my_note">My Note</string>
    <string name="save">Save</string>
    <string name="my_note_hint">My note</string>
    <string name="new_note">New Note</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="mode">Mode</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="field_empty_message">Field cannot be empty</string>
    <string name="password_short_error">Password is too short</string>
    <string name="registration_ok_message">Registration completed successfully</string>
    <string name="registration_error_message">Registration failed</string>
    <string name="logout">Logout</string>
    <string name="login_ok_message">Logged in</string>
    <string name="login_error_message">Cannot login</string>
    <string name="password_reset_link_send_ok_message">Password reset link send to email</string>
    <string name="password_reset_link_send_error_message">Password reset link could not send to email</string>
    <string name="weekly_plan">Weekly Plan</string>
    <string name="monthly_plan">Monthly Plan</string>
    <string name="reminder_type">Reminder Type</string>
    <string name="event_type">Event Type</string>
    <string name="reminder_frequency">Reminder Frequency</string>
    <string name="location">Location</string>
    <string name="change_end_date">Change End Date</string>
    <string name="change_start_date">Change Start Date</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="event_detail">Event Detail</string>
    <string name="event_name">Event Name</string>
    <string name="month_events">This Month\'s Events</string>
    <string name="no_data_available">You completed all the events!!!</string>
    <string name="week_events">This Week\'s Events</string>
    <string name="no_events_message">You don\'t have any events</string>
    <string name="day_events">Day\'s Events</string>
    <string name="default_sound">Default Sound</string>
    <string name="default_reminder_frequency">Default Reminder Frequency</string>
    <string name="app_theme">App Theme</string>
    <string name="update_ok_message">Updated successfully</string>
    <string name="update_error_message">Updated failed</string>
    <string name="format_error_message">Wrong format</string>
    <string name="share">Share</string>
    <string name="new_event">New Event</string>
    <string name="new_event_ok_message">New Event Added</string>
    <string name="new_event_error_message">Event add failed</string>
    <string name="event_delete_ok_message">Event deleted</string>
    <string name="event_delete_error_message">Event delete failed</string>
    <string name="reminders">Reminders</string>
    <string name="event_name_required">Event name is required</string>
    <string name="new_reminder">New Reminder</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="reminder_add_error_message">Cannot add reminder</string>
    <string name="reminder_add_ok_message">Reminder added</string>
    <string name="reminder_update_ok_message">Reminder updated</string>
    <string name="reminder_update_error_message">Reminder update failed</string>
    <string name="reminder_delete_ok_message">Reminder deleted</string>
    <string name="reminder_delete_error_message">Reminder delete failed</string>
    <string name="change_date">Change Date</string>
    <string name="change_time">Change Time</string>
    <string name="default_notification_title">CalendarEvent</string>
    <string name="default_notification_content">There is an event soon</string>
    <string name="invalid_date">Invalid date</string>
    <string name="event_share_event_name">Event Name</string>
    <string name="event_share_event_detail">Event Detail</string>
    <string name="event_share_event_start_date">Start Date</string>
    <string name="event_share_event_end_date">End Date</string>
    <string name="event_share_location">Location</string>
    <string name="splash_footer_text">Yildiz Calendar App © 2020</string>
    <string name="splash_before_logo_text">We are the knights who say Ni!</string>
    <string name="splash_after_logo_text">Best calendar app ever!</string>
    <string name="sound">Sound</string>
    <string name="select_sound_message">Select Sound</string>
    <string name="no_reminder_available">There are no reminders</string>
    <string name="settings_normal_case">Settings</string>
    <string name="reminder_date_err_message">Reminder date is invalid</string>
    <string name="event_date_err_message">Event date is invalid</string>
    <string name="change">Change</string>
    <string name="share_location">Share Location</string>
    <string name="login_screen_logo_desc">Login screen logo</string>
    <string-array name="reminder_freq">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
    <string-array name="reminder_type">
        <item>Vibration</item>
        <item>Sound</item>
    </string-array>
    <string-array name="app_theme">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
</resources>
