<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/event_menu_reminders"
        android:title="@string/reminders"
        android:icon="@drawable/ic_access_alarm_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/event_menu_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/event_menu_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/event_menu_save"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/save"
        app:showAsAction="ifRoom" />

</menu>