<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.ReminderDetailActivity">

    <TextView
        android:id="@+id/reminder_detail_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/date"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@id/reminder_detail_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/reminder_detail_date"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_shape"
        android:fontFamily="@font/montserrat"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/gray"
        android:text="@string/change_date"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/reminder_detail_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/reminder_detail_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/time"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@id/reminder_detail_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/reminder_detail_time"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_shape"
        android:fontFamily="@font/montserrat"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/gray"
        android:text="@string/change_time"
        app:layout_constraintTop_toBottomOf="@id/reminder_detail_date"
        app:layout_constraintBottom_toTopOf="@id/reminder_detail_save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/reminder_detail_save_button"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_shape"
        android:fontFamily="@font/montserrat"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/reminder_detail_delete_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/reminder_detail_delete_button"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_shape"
        android:fontFamily="@font/montserrat"
        android:text="@string/delete"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="@id/reminder_detail_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/reminder_detail_save_button"
        app:layout_constraintTop_toTopOf="@id/reminder_detail_save_button" />

</androidx.constraintlayout.widget.ConstraintLayout>