<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsActivity">

    <TextView
        android:id="@+id/settings_default_sound_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/default_sound"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintBottom_toTopOf="@id/settings_default_sound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/settings_default_sound"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:alpha="0.90"
        android:autofillHints=""
        android:hint="@string/sound"
        android:background="@drawable/rounded_edit_text_shape"
        android:ems="12"
        android:fontFamily="@font/montserrat"
        android:inputType="text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/secondary_text_dark"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toTopOf="@id/settings_default_reminder_frequency_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/settings_default_sound_text"
        app:layout_constraintTop_toBottomOf="@id/settings_default_sound_text" />

    <Button
        android:id="@+id/settings_sound_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/ic_folder_accent_48dp"
        app:layout_constraintBottom_toBottomOf="@id/settings_default_sound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/settings_default_sound"
        app:layout_constraintTop_toTopOf="@id/settings_default_sound" />

    <TextView
        android:id="@+id/settings_default_reminder_frequency_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/default_reminder_frequency"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toTopOf="@id/settings_default_reminder_frequency_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/settings_default_sound"
        app:layout_constraintTop_toBottomOf="@id/settings_default_sound" />

    <Spinner
        android:id="@+id/settings_default_reminder_frequency_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/settings_default_reminder_frequency_text"
        app:layout_constraintStart_toStartOf="@id/settings_default_reminder_frequency_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/settings_app_theme_text" />

    <TextView
        android:id="@+id/settings_app_theme_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/app_theme"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toTopOf="@id/settings_app_theme_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/settings_default_reminder_frequency_spinner"
        app:layout_constraintTop_toBottomOf="@id/settings_default_reminder_frequency_spinner" />

    <Spinner
        android:id="@+id/settings_app_theme_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintTop_toBottomOf="@id/settings_app_theme_text"
        app:layout_constraintStart_toStartOf="@id/settings_app_theme_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/settings_save_button" />

    <Button
        android:id="@+id/settings_save_button"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_button_shape"
        android:fontFamily="@font/montserrat"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/gray"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/settings_default_sound"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>