<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_vertical_end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_horizontal_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_horizontal_separation_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_horizontal_end_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="?attr/actionBarSize" />

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/login_screen_logo_desc"
        android:src="@drawable/ic_event_accent_96dp"
        app:layout_constraintStart_toStartOf="@id/login_vertical_guideline"
        app:layout_constraintEnd_toEndOf="@id/login_vertical_end_guideline"
        app:layout_constraintTop_toTopOf="@id/login_horizontal_guideline"
        app:layout_constraintBottom_toTopOf="@id/login_app_name" />

    <TextView
        android:id="@+id/login_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/app_name"
        android:textColor="@color/darkPrimary"
        app:layout_constraintStart_toStartOf="@id/login_vertical_guideline"
        app:layout_constraintEnd_toEndOf="@id/login_vertical_end_guideline"
        app:layout_constraintTop_toBottomOf="@id/login_logo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_email_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/login_vertical_end_guideline"
        app:layout_constraintStart_toStartOf="@id/login_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/login_horizontal_separation_guideline">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.90"
            android:autofillHints=""
            android:background="@drawable/rounded_edit_text_shape"
            android:ems="14"
            android:fontFamily="@font/montserrat"
            android:hint="@string/login_text"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/login_vertical_end_guideline"
        app:layout_constraintStart_toStartOf="@id/login_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/login_email_input">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.90"
            android:autofillHints=""
            android:background="@drawable/rounded_edit_text_shape"
            android:ems="14"
            android:fontFamily="@font/montserrat"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/login_button_shape"
        android:fontFamily="@font/montserrat"
        android:text="@string/login_button_text"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password_input" />


    <androidx.cardview.widget.CardView
        android:id="@+id/login_text_card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:background="@color/darkPrimary"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/login_horizontal_end_guideline"
        app:layout_constraintEnd_toEndOf="@id/login_vertical_end_guideline"
        app:layout_constraintStart_toEndOf="@id/login_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@id/login_button">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkPrimary">

            <TextView
                android:id="@+id/login_forgot_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/forgot_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/login_sign_up_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/sign_up"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/login_forgot_password_text"
                app:layout_constraintTop_toBottomOf="@id/login_forgot_password_text"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/login_login_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/login_horizontal_separation_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_app_name" />
</androidx.constraintlayout.widget.ConstraintLayout>
